--- a/backend/package.json
+++ b/backend/package.json
@@ -1,15 +1,18 @@
 {
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
+    "cookie": "^0.5.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "pg": "^8.11.1",
     "sequelize": "^6.32.1",
-    "sqlite3": "^5.1.6",
-    "bcrypt": "^5.1.0",
-    "cookie": "^0.5.0"
+    "sqlite3": "^5.1.6"
   },
   "devDependencies": {
+    "eslint": "^8.44.0",
+    "eslint-plugin-vue": "^9.15.1",
     "nodemon": "^2.0.22"
   },
   "scripts": {
