Register, Forgot password, reset password, front/baackend functionality implemented, UDF for userand account creation

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,4 @@
 DATABASE_URL=postgres://grocerylistadmin:&EdCDuMs4zden6Am^-bS-@grocerylist-1.crc7z4nyfehn.us-east-2.rds.amazonaws.com:5432/grocerylist
 ORIGIN_URL=http://localhost:8080
+EMAIL_USERNAME=daoust.chris@gmail.com
+EMAIL_PASSWORD=axrdihdrlcuimqho
