--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "nodemailer": "^6.9.3",
     "pg": "^8.11.1",
     "sequelize": "^6.32.1",
     "sqlite3": "^5.1.6"
