--- a/backend/package.json
+++ b/backend/package.json
@@ -1,4 +1,8 @@
 {
+  "engines": {
+    "npm": ">=9",
+    "node": ">=18"
+  },
   "dependencies": {
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
@@ -8,6 +12,7 @@
     "express": "^4.18.2",
     "nodemailer": "^6.9.3",
     "pg": "^8.11.1",
+    "http-errors": "~1.6.3",
     "sequelize": "^6.32.1",
     "sqlite3": "^5.1.6"
   },
@@ -17,6 +22,10 @@
     "nodemon": "^2.0.22"
   },
   "scripts": {
-    "server": "nodemon api.js"
+    "dev": "nodemon app.js",
+    "start": "node app.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "server": "node app.js",
+    "build": "pkg app.js"
   }
 }
